# Financial_Usecases

./: .gitignore  ReadMe.md  pyproject.toml
artifacts/: uit_report.html  uit_report.md
src/uit/: cli.py  mock_data.py  pipeline.py
