[project]
name = "financial-usecases-uit"
version = "0.1.0"
description = "Insider trading (UIT) mock data + detection pipeline (XGBoost + SHAP + causal forest)."
readme = "ReadMe.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "scikit-learn>=1.5",
  "xgboost>=2.0",
  "shap>=0.46",
  "matplotlib>=3.8",
  "econml>=0.15",
  "tabulate>=0.9",
]

[project.scripts]
uit = "uit.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uit"]
